apps/base/lzt-ui/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lztechnology
  labels:
    name: lztechnology
    pod-security.kubernetes.io/warn: baseline
    pod-security.kubernetes.io/audit: baseline
