apps/base/lzt-ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lztechnology-website
  namespace: lztechnology
  labels:
    app: lztechnology-website
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: lztechnology-website
